// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas a <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch0"
    />
    <GifGrid
      category="Goku"
      key="Goku1"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas a <GifExpertApp /> debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
